new proj/src/objects/GE_ES_ITO_Deal_Strategy__c.object
<CustomObject>
    <description>This is the Deal Strategy information required for Sales Managers to enter before they submit to Commercial Operations.</description>
    <fields>
        <fullName>GE_ES_Customer_Evaluation_Criteria__c</fullName>
        <inlineHelpText>What will the customer evaluation criteria be? Examples: NPV, Payback, IRR, Lowest bidder, etc.</inlineHelpText>
        <label>Customer Evaluation Criteria</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Customer_Objective__c</fullName>
        <inlineHelpText>What&apos;s the Customer&apos;s CTQs?  Examples: Lower O&amp;M costs, lower COE, Improve Effciency, Reliability, Availability, Increase Production, Lower Energy Consumption, etc.</inlineHelpText>
        <label>Customer Objective</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deal Strategies</relationshipLabel>
        <relationshipName>Deal_Strategies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_Strategy_to_Win__c</fullName>
        <inlineHelpText>Roadmap to Closure. What is the strategy to win? Value story, technology, delivery/schedule, price?</inlineHelpText>
        <label>Strategy to Win</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Deal Strategy</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Deal Strategy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>